# rust-nexus

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  DEVELOPMENT.md  OPTIMIZATION_PLAN_1.md  README.md  api_tests.http  docker-compose.yml  rust-toolchain.toml  test_api.ps1  test_api.sh
migrations/: 001_create_users_table.sql  002_optimize_indexes.sql
src/: database.rs  main.rs
src/application/: mod.rs
src/application/dto/: mod.rs  user_dto.rs
src/application/services/: mod.rs  user_app_service.rs
src/database/: config.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs  user.rs
src/domain/ports/: mod.rs  user_repository_port.rs
src/domain/services/: mod.rs  user_service.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: postgres_user_repository.rs
src/infrastructure/web/: handlers.rs  mod.rs  routes.rs
tests/: integration_tests.rs
